VirtualService/vote.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vote
spec:
  hosts:
  - "*"
  gateways:
  - vote-gateway
